syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  // Return many replies
  rpc SayManyHellos (HelloRequest) returns (stream HelloReply);

  // Accepts many requests
  rpc SayHelloToLastRequest (stream HelloRequest) returns (HelloReply);

  // Bi-directional streaming
  rpc SayHelloToEveryRequest (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
